--- a/web/themes/custom/alps_trips/package.json
+++ b/web/themes/custom/alps_trips/package.json
@@ -5,8 +5,36 @@
   "author": "Luca Lusso",
   "license": "GPL-3.0",
   "devDependencies": {
+    "@eslint/eslintrc": "^3.1.0",
+    "@eslint/js": "^9.8.0",
     "autoprefixer": "^10.4.20",
+    "css-loader": "6",
+    "eslint": "^8.9.0",
+    "eslint-config-airbnb-base": "^15.0.0",
+    "eslint-config-prettier": "^8.4.0",
+    "eslint-plugin-import": "^2.25.4",
+    "eslint-plugin-prettier": "^4.0.0",
+    "eslint-plugin-yml": "^1.2.0",
+    "globals": "^15.9.0",
+    "mini-css-extract-plugin": "2",
     "postcss": "^8.4.41",
-    "tailwindcss": "3"
+    "postcss-loader": "7",
+    "prettier": "^2.1.2",
+    "stylelint": "^16.8.1",
+    "stylelint-config-standard": "^36.0.1",
+    "stylelint-config-tailwindcss": "^0.0.7",
+    "stylelint-order": "^6.0.4",
+    "tailwindcss": "3",
+    "webpack": "5",
+    "webpack-cli": "5"
+  },
+  "scripts": {
+    "build": "webpack --config webpack.config.js",
+    "build:dev": "webpack --config webpack.config.js --mode development",
+    "start": "webpack --watch",
+    "start:dev": "webpack --watch --mode development",
+    "lint:js": "node ./node_modules/eslint/bin/eslint.js .",
+    "lint:js:fix": "node ./node_modules/eslint/bin/eslint.js --fix .",
+    "lint:css": "stylelint \"**/*.css\""
   }
 }
