--- a/web/themes/custom/alps_trips/package.json
+++ b/web/themes/custom/alps_trips/package.json
@@ -7,6 +7,8 @@
   "devDependencies": {
     "@eslint/eslintrc": "^3.1.0",
     "@eslint/js": "^9.8.0",
+    "@tailwindcss/forms": "^0.5.7",
+    "@tailwindcss/typography": "^0.5.14",
     "autoprefixer": "^10.4.20",
     "css-loader": "6",
     "eslint": "^8.9.0",
