--- a/web/themes/custom/alps_trips/package.json
+++ b/web/themes/custom/alps_trips/package.json
@@ -38,5 +38,8 @@
     "lint:js": "node ./node_modules/eslint/bin/eslint.js .",
     "lint:js:fix": "node ./node_modules/eslint/bin/eslint.js --fix .",
     "lint:css": "stylelint \"**/*.css\""
+  },
+  "dependencies": {
+    "leaflet": "^1.9.3"
   }
 }
