--- a/web/themes/custom/alps_trips/alps_trips.info.yml
+++ b/web/themes/custom/alps_trips/alps_trips.info.yml
@@ -36,3 +36,5 @@ components:
     atoms: ../../../../storybook/stories/01-atoms
     molecules: ../../../../storybook/stories/02-molecules
     organisms: ../../../../storybook/stories/03-organisms
+ckeditor5-stylesheets:
+  - build/styles.css
